added map and markers

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -2,7 +2,18 @@ h1 {
   color: green;
 }
 
-body {
-  text-align: center;
-  margin: auto;
+#map {
+    height: 800px;
+    width: 800px;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
 }
