--- a/src/client/app.css
+++ b/src/client/app.css
@@ -2,10 +2,33 @@ h1 {
   color: green;
 }
 
-#map {
-    height: 800px;
-    width: 800px;
+#icon{
+
+    height: 40px;
+    width: 45px;
 }
+#map {
+  position: absolute;
+  top: 57px;
+  left: 0;
+  bottom: 0px;
+  right: 0;
+}
+
+#legendImg{
+  height: 25px;
+  width: 25px;
+}
+#legendTitle{
+  font-size: 18px;
+}
+#legend {
+    font-family: Arial, sans-serif;
+    background: #fff;
+    padding: 10px;
+    margin: 10px;
+    border: 3px solid #000;
+  }
 
 html, body {
   height: 100%;
@@ -13,7 +36,6 @@ html, body {
   padding: 0;
 }
 
-.container {
-  display: flex;
-  justify-content: center;
+.bg-dark {
+    background-color: rgb(34, 38, 42)!important;
 }
